--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -42,16 +42,17 @@ android {
         main.java.srcDirs += 'src/main/kotlin'
     }
 
-    defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.tak_blog"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
-        minSdkVersion flutter.minSdkVersion
-        targetSdkVersion flutter.targetSdkVersion
-        versionCode flutterVersionCode.toInteger()
-        versionName flutterVersionName
-    }
+defaultConfig {
+    // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
+    applicationId "com.example.tak_blog"
+    // You can update the following values to match your application needs.
+    // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
+    minSdkVersion 19
+    targetSdkVersion flutter.targetSdkVersion
+    multiDexEnabled true // اضافه کردن این خط
+    versionCode flutterVersionCode.toInteger()
+    versionName flutterVersionName
+}
 
     buildTypes {
         release {
@@ -67,5 +68,6 @@ flutter {
 }
 
 dependencies {
+    implementation "androidx.multidex:multidex:2.0.1" // اضافه کردن این خط
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
